2009-12-03  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve LL benchmark suite, start merging changes from M. Hicks.

	* benchmarks/livermore/kernel1.c,
	* benchmarks/livermore/kernel2.c,
	* benchmarks/livermore/kernel3.c,
	* benchmarks/livermore/kernel4.c,
	* benchmarks/livermore/kernel5.c,
	* benchmarks/livermore/kernel6.c,
	* benchmarks/livermore/kernel7.c,
	* benchmarks/livermore/kernel8.c,
	* benchmarks/livermore/kernel9.c,
	* benchmarks/livermore/kernel10.c,
	* benchmarks/livermore/kernel11.c,
	* benchmarks/livermore/kernel12.c,
	* benchmarks/livermore/kernel15.c,
	* benchmarks/livermore/kernel18.c,
	* benchmarks/livermore/kernel19.c: New.

	* benchmarks/livermore/ll-bounds.ods,
	* benchmarks/livermore/ll-bounds.csv: Fix some interfaces.

	* benchmarks/livermore/ll-generate.py: Properly sort parameters
	for initialization. Generate a prototype for the `kernel'
	function. Pass number of cores if known from SEP.

2009-12-03  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Start automating the LL benchmark suite.
	
	* benchmarks/livermore/ll-bounds.ods,
	* benchmarks/livermore/ll-bounds.csv,
	* benchmarks/livermore/ll-generate.py: New.

2009-11-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor benchmarking fixes.

	* build-aux/benchmarks.mk: Also ship $(BUILT_SOURCES) with
	Unibench archives.

	* benchmarks/lib/benchmark.c: Change label for stub of SEP place
	allocation on targets which don't use SEP.
	
2009-11-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update FFT benchmark for use with Unibench.
	
	* benchmarks/fft/fft_bench.c,
	* benchmarks/fft/fft_bench1.c,
	* benchmarks/fft/fft_bench2.c,
	* benchmarks/fft/fft_test.c,
	* benchmarks/fft/fft_test1.c,
	* benchmarks/fft/fft_test2.c: Remove.

	* benchmarks/fft/fft-bench.c,
	* benchmarks/fft/fft-bench1.c,	
	* benchmarks/fft/fft-bench2.c: New. Use benchmarking framework.

	* benchmarks/fft/Makefile.am,
	* benchmarks/fft/fft.h,
	* benchmarks/fft/fft_extra.c: Update accordingly.
	
	* benchmarks/fft/fft-bench1.inputs,